--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-torch==2.2.2
+torch==2.4.1 --index-url https://download.pytorch.org/whl/cu121
 numpy==1.24.4
 diffusers==0.30.3
 transformers==4.45.2
 accelerate==1.0.1
 einops==0.8.0
 requests==2.32.3
-torchvision==0.17.2 -c pytorch
+torchvision==0.19.1 --index-url https://download.pytorch.org/whl/cu121
 ipykernel==6.29.5
 matplotlib==3.7.5
 wandb==0.8.15
