--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ torchvision==0.19.1 --index-url https://download.pytorch.org/whl/cu121
 ipykernel==6.29.5
 matplotlib==3.7.5
 wandb==0.18.5
+wandb[media]==0.18.5
