--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ opencv-python==4.10.0.84
 onnxruntime==1.19.2
 scipy==1.10.1
 scikit-image==0.21.0
-'git+https:github.com/XPixelGroup/BasicSR.git'
+git+https://github.com/XPixelGroup/BasicSR.git
