--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-torch==2.4.1 --index-url https://download.pytorch.org/whl/cu121
+torch==2.4.1 --index-url https://download.pytorch.org/whl/cu118
 numpy==1.24.4
 diffusers==0.30.3
 transformers==4.45.2
 accelerate==1.0.1
 einops==0.8.0
 requests==2.32.3
-torchvision==0.19.1 --index-url https://download.pytorch.org/whl/cu121
+torchvision==0.19.1 --index-url https://download.pytorch.org/whl/cu118
 ipykernel==6.29.5
 matplotlib==3.7.5
 wandb==0.18.5
@@ -16,3 +16,4 @@ onnxruntime==1.19.2
 scipy==1.10.1
 scikit-image==0.21.0
 git+https://github.com/XPixelGroup/BasicSR.git
+git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
