--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,7 @@ sympy
 onnxruntime-gpu==1.19.2 --index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-11/pypi/simple/
 scipy==1.10.1
 scikit-image==0.21.0
+clean-fid==0.1.35
+torchmetrics==1.5.2
 git+https://github.com/XPixelGroup/BasicSR.git
 # git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
