--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,6 @@ torchmetrics==1.5.2
 torch-fidelity==0.3.0
 gradio==4.44.1
 gradio_client==1.3.0
+python-dotenv==1.0.1
 git+https://github.com/XPixelGroup/BasicSR.git
 # git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
