--- a/requirements.txt
+++ b/requirements.txt
@@ -25,5 +25,5 @@ torch-fidelity==0.3.0
 gradio==4.44.1
 gradio_client==1.3.0
 python-dotenv==1.0.1
+fire==0.7.0
 git+https://github.com/XPixelGroup/BasicSR.git
-# git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
