--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,6 @@ gradio==4.44.1
 gradio_client==1.3.0
 python-dotenv==1.0.1
 fire==0.7.0
+clean-fid==0.1.35
+prettytable==3.11.0
 git+https://github.com/XPixelGroup/BasicSR.git
