--- a/requirements.txt
+++ b/requirements.txt
@@ -29,4 +29,5 @@ fire==0.7.0
 clean-fid==0.1.35
 prettytable==3.11.0
 optimum==1.23.3
+bitsandbytes==0.45.0
 git+https://github.com/XPixelGroup/BasicSR.git
