--- a/experiment/hungvo_experiment/TensorRT_exps/environment.yml
+++ b/experiment/hungvo_experiment/TensorRT_exps/environment.yml
@@ -1,4 +1,4 @@
-name: tensorrt
+name: tensorrt_last
 channels:
   - conda-forge
 dependencies:
@@ -101,9 +101,6 @@ dependencies:
       - tifffile==2025.1.10
       - timm==0.6.7
       - tokenizers==0.21.0
-      - torch==2.5.1+cu118
-      - torchaudio==2.5.1+cu118
-      - torchvision==0.20.1+cu118
       - tqdm==4.67.1
       - transformers==4.48.0
       - triton==3.1.0
