--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-torch==2.4.1+cu118
+torch==2.4.1+cu121
 numpy==1.24.4
 diffusers==0.30.3
 transformers==4.45.2
 accelerate==1.0.1
 einops==0.8.0
 requests==2.32.3
-torchvision==0.19.1+cu118
+torchvision==0.19.1+cu121
 ipykernel==6.29.5
 matplotlib==3.7.5
 wandb==0.18.5
@@ -30,4 +30,5 @@ clean-fid==0.1.35
 prettytable==3.11.0
 optimum==1.23.3
 bitsandbytes==0.45.0
+xformers==0.0.28.post1
 git+https://github.com/XPixelGroup/BasicSR.git
